# grpc-petshop-rs

./: README.md
client/: .gitignore  .prettierignore  README.md  ecosystem.config.js  index.html  package-lock.json  package.json  tsconfig.json
client/scripts/: protogen.sh
client/src/: App.tsx  Login.tsx  PetList.tsx  api.ts  index.tsx  signals.ts
server/: Cargo.toml  README.md  build.rs
server/proto/: auth.v1.proto  shop.v1.proto
server/src/: api.rs  main.rs
