[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
prost = "0.11.3"
tokio = { version = "1.23.0", features = ["full"] }
tonic = "0.8.3"
tonic-web = "0.5.0"
tower-http = { version = "0.3.5", features = ["cors"] }

[build-dependencies]
tonic-build = "0.8.4"
